--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page title</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
